--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 enableCORS = false
 enableXsrfProtection = false
 headless = true
-port = 8080
+# port = 8080  <-- BORRA O COMENTA ESTA LÍNEA
 address = "0.0.0.0"
